# nightshift

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  PROVENANCE.md  README.md  pyproject.toml
crates/nightshiftd/: Cargo.toml
crates/nightshiftd/src/: agenda.rs  bundle.rs  coordination.rs  errors.rs  finding.rs  governor.rs  governor_client.rs  horizon.rs  horizon_policy.rs  ledger.rs  lib.rs  liveness.rs  main.rs  nq.rs  nq_peek.rs  packet.rs  pipeline.rs  posture.rs  reconcile_horizon.rs  reconciler.rs  store.rs
crates/nightshiftd/src/store/: sqlite.rs
crates/nightshiftd/tests/: agenda_fixture.rs  deferred_run_split.rs  governor_rpc_live.rs  horizon_cross_run.rs  horizon_packet_state.rs  liveness_pipeline.rs  nq_cli.rs  posture_surface.rs  reconciler_pipeline.rs
docs/: DEPLOYMENT-MATURITY.md  DESIGN.md  FLOW-tolerability-horizon.md  GAP-attention-state.md  GAP-backup-restore.md  GAP-deferred-run-split.md  GAP-escalation.md  GAP-governor-contract.md  GAP-incident-modes.md  GAP-mcp-authority.md  GAP-nightshift-coordination-mode.md  GAP-nq-activation.md  GAP-nq-nightshift-contract.md  GAP-parallel-ops.md  GAP-storage.md  SCHEMA-agenda.md  SCHEMA-bundle.md  SCHEMA-packet.md
tests/fixtures/: nq-manifest.json  nq-publisher-protected.yaml  wal-bloat-review.yaml
