[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nightshift"
version = "0.1.0"
description = "Deferred agent work with receipts, reconciliation, and governed promotion"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "James Beck" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
